
## [UNRELEASED] -- XXXX-XX-XX
* toString-Methode für Tabellen, Columns, Rows und Values erstellen.
* Die Datei application.mdi wird jetzt anhand der xtcasMdi-Tabelle benutzerspezifisch erzeugt.
* Prüfung auf validen Input für Passwörter beim Inserten und Updaten von DB Usern.
* Auslesen von UserGroupTokens für DB User bei Anfragen.


## [12.55.1] -- 2022-11-22
* LDAP: Raise an Active Directory-specific error code instead of a BadCredentialsException
* Username Spaltenlänge in Error Table korrigiert
* Mdi Masken, Tabelle und Prozeduren erstellt(samt Icon und Übersetzung)
* Initialisierungs Prozedur und Skript erstellt
* Icon Schrott beseitigt

## [12.55.0] -- 2022-11-11
* Korrekturen der UserGroup Prozeduren. Sie verwenden nun nicht mehr den UserCode, sondern den KeyText der UserGroup.
* Korrektur xpcasInsertAuthorities. Es konnte über die Authorities ein Benutzer nur einer UserGruppe zugeordnet werden.
* Weitere Übersetzungen für die UserGroup Masken und OptionPages.
* Korrektur xpcasDeleteAuthorities. Obwohl die Authority auf -1 gestellt wurde, hatte man trotzdem volle Rechte. Nun wird sie ganz gelöscht.
* Neue Icons.
* Update auf SpringBoot 2.7.5

## [12.54.3] -- 2022-09-30

Keine Änderungen 

## [12.54.2] -- 2022-09-29
* Tabellenbezeichnung von xtcasUserPrivileges korrigieren.

## [12.54.1] -- 2022-09-29
* Releaseprozess für Helper korrigieren.

## [12.54.0] -- 2022-09-29
* #293 Standardmasken zum Verwalten von Benutzern einbinden.
* Helper zum Verschlüsseln von Passwörtern innerhalb der Maske.

## [12.53.0] -- 2022-09-13
* devWarning in "dev"-Profile verschoben
* link:https://github.com/minova-afis/aero.minova.cas/issues/368[#368] ServiceProperties Tabelle und Maske erstellen:
  Hiermit werden zukünftig Dienste über link:https://github.com/minova-afis/aero.minova.service[aero.minova.service] konfiguriert.
  Damit kann man Dienste über eine Maske und somit ohne Dateizugriff einfach und dennoch sicher konfigurieren.

## [12.52.0] -- 2022-09-02